deployments/heimdall/heimdall-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heimdall
  namespace: heimdall
spec:
  replicas: 1
  selector:
    matchLabels:
      app: heimdall
  template:
    metadata:
      labels:
        app: heimdall
    spec:
      containers:
        - name: heimdall
          image: linuxserver/heimdall:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
              ephemeral-storage: "100Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
              ephemeral-storage: "500Mi"
          volumeMounts:
            - name: heimdall-config
              mountPath: /config
      volumes:
        - name: heimdall-config
          persistentVolumeClaim:
            claimName: heimdall-pvc
