deployments/heimdall/heimdall-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: heimdall
  namespace: heimdall
spec:
  type: NodePort
  selector:
    app: heimdall
  ports:
    - port: 80         # Service port
      targetPort: 80   # Container port
      nodePort: 30090  # Port on the node, optional
